[fix] #125 일주일 기록 계산 로직 수정